# leptos_form_tool

./: .gitignore  Cargo.toml  LICENSE  README.md  getting_started.md  grid_form.scss
src/: form.rs  form_builder.rs  lib.rs  validation_builder.rs
src/controls/: button.rs  checkbox.rs  custom.rs  group.rs  heading.rs  hidden.rs  mod.rs  output.rs  radio_buttons.rs  select.rs  slider.rs  spacer.rs  stepper.rs  submit.rs  text_area.rs  text_input.rs
src/styles/: grid_form.rs  mod.rs
