[package]
name = "leptos_form_tool"
version = "0.3.0"
edition = "2021"
authors = ["Mitchell Marino"]
description = "A declarative way to create forms for leptos."
readme = "README.md"
repository = "https://github.com/MitchellMarinoDev/leptos_form_tool.git"
license = "MIT OR Apache-2.0"
keywords = ["leptos", "web", "wasm", "html"]
categories = ["web-programming"]

[dependencies]
leptos = "0.8"
leptos_router = "0.8"
serde = { version = "1.0", features = ["derive"] }
web-sys = "0.3"
